--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ frontend/dist/
 # OS
 .DS_Store
 Thumbs.db
+
+# Security Reports (générés par le pipeline DevSecOps)
+reports/
+*.xml
+*.json
+!package.json
+!package-lock.json
+eslint-report.json
+zap_report.json
